--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -73,6 +73,17 @@
         padding: 20px;
         overflow: hidden;
     }
+    .image-main-div img{
+        height: auto;
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        top: -20%;
+        transform: translate(-50%);
+        width: 320px;
+        transition: all 1s;
+       
+    }
 
  
  
