--- a/src/Components/Intro.css
+++ b/src/Components/Intro.css
@@ -56,8 +56,22 @@
     object-fit: cover;
     overflow: hidden;
     width: 100%;
-    height: 100%;
-    
+    height: 500px;
+}
+.intro-child{
+    display: flex;
+    justify-content: space-around;
+    height: 100vh;
+
+}
+.intro-col-1{
+    width: 50%;
+
+}
+.intro-col-2{
+    width: fit-content;
+    height:fit-content;
+  
 }
 
 @media screen and (max-width:767px) {
@@ -65,7 +79,7 @@
     #intro-mt{
         margin-top: 20px;
         margin-bottom: 20px;
-        /* background-image: url(../images/srikanth.png);   */
+        /* background-image: url(../images/hero.png);   */
         object-fit: contain;
     }
     .hireme{
@@ -79,4 +93,27 @@
         width: 100%;
         margin-top: 30px;
     }
+    .intro-child{
+        display: flex;
+        justify-content: space-around;
+        height: fit-content;
+       flex-direction: column;
+    }
+    .intro-col-1{
+        width: 100%;
+        order: 2;
+    }
+    .intro-col-2{
+        width: fit-content;
+        height:fit-content;
+      order: 1;
+    }
+    .srikanth-img{
+        object-fit: cover;
+        overflow: hidden;
+        width: 100%;
+        height: fit-content ;
+    }
+ 
+    
 }
